test/conformance/kuttl/verifyImages/clusterpolicy/standard/failure-policy-test-noconfigmap-diffimage-success/03-create-bad-pod.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: bad-pod.yaml
  shouldFail: false
