test/conformance/kuttl/verifyImages/clusterpolicy/standard/failure-policy-test-noconfigmap-diffimage-success/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: image-verify-polset-failurepolicy-ignore
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
