test/conformance/kuttl/verifyImages/clusterpolicy/standard/failure-policy-test-noconfigmap-diffimage-success/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: image-verify-polset
spec:
  background: false
  failurePolicy: Ignore
  rules:
    - context:
        - configMap:
            name: myconfigmap
            namespace: mynamespace
          name: myconfigmap
      match:
        any:
        - resources:
            kinds:
              - Pod
      name: image-verify-pol1
      verifyImages:
        - imageReferences:
            - ghcr.io/*
          mutateDigest: false
          verifyDigest: false
          attestors:
            - entries:
                - keys:
                    publicKeys: '{{myconfigmap.data.configmapkey}}'
  validationFailureAction: Audit
  webhookTimeoutSeconds: 30
